--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "daisyui": "^4.12.10",
     "react": "^18.3.1",
+    "react-daisyui": "^5.0.3",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
@@ -22,6 +24,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
   }
